ajuste titulo pagina

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Monitoramento de Etiquetas Sobral - Sistema de gerenciamento e controle de etiquetas da SV Sobral"
+      content="Monitoramento de Etiquetas Eletronicas - Sistema de gerenciamento e controle de etiquetas da SV Elétrica"
     />
-    <meta name="keywords" content="etiquetas, monitoramento, sobral, sv sobral, controle de estoque" />
-    <title>Etiquetas SV Sobral</title>
+    <meta name="keywords" content="etiquetas, monitoramento, sobral, sv eletrica, controle de estoque" />
+    <title>Etiquetas SV Elétrica</title>
   </head>
   <body>
     <noscript>Você precisa habilitar JavaScript para executar este aplicativo.</noscript>
